tests/mm0_mmu/fail/bad-sort142.mm0
-- bad modifier order
pure free strict sort s142;